# typer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/: library.h  typer.h
res/: words.txt
src/: library.cpp  typer.cpp
